# PINN

mfl_uq_pinn_project/: README.md  requirements.txt
mfl_uq_pinn_project/src/: __init__.py
mfl_uq_pinn_project/src/base_pinn/: __init__.py  hard_boundary_pinn.py  validate_base_pinn.py
mfl_uq_pinn_project/src/data_processing/: __init__.py  comsol_data_converter.py  data_preprocessing.py  dipole_simulation.py  generate_dataset.py
mfl_uq_pinn_project/src/mfl_forward/: __init__.py  mfl_forward_pinn.py  mfl_geometry.py  mfl_pde.py  validate_mfl_forward.py
uq_pinn_mfl_research/: .gitignore  README.md  pyproject.toml
uq_pinn_mfl_research/configs/: default.yaml
uq_pinn_mfl_research/src/uq_pinn_mfl/: __init__.py  __main__.py  cli.py  config.py
uq_pinn_mfl_research/src/uq_pinn_mfl/data/: __init__.py  audit.py  labels.py  preprocess.py  splits.py
uq_pinn_mfl_research/src/uq_pinn_mfl/evaluation/: uq.py
uq_pinn_mfl_research/src/uq_pinn_mfl/models/: __init__.py  denoising.py  surrogate.py
uq_pinn_mfl_research/src/uq_pinn_mfl/simulation/: __init__.py  realistic_mfl.py
uq_pinn_mfl_research/src/uq_pinn_mfl/training/: __init__.py  common.py  pipelines.py
